// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SWITCH_DISPLAY correctly with default value to false 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "SWITCH_DISPLAY",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "OFF",
        "ON",
      ]
    }
    value={0}
  >
    <DisplayStatus__Container>
      <div
        className="DisplayStatus__Container-jrDlkR DzKAF"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  OFF
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="success"
              >
                <StatusLight__Svg
                  color="success"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE geyPxt"
                    color="success"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  ON
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;

exports[`should render SWITCH_DISPLAY correctly with false value 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "SWITCH_DISPLAY",
      "values": Object {
        "value": 0,
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "OFF",
        "ON",
      ]
    }
    value={0}
  >
    <DisplayStatus__Container>
      <div
        className="DisplayStatus__Container-jrDlkR DzKAF"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  OFF
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="success"
              >
                <StatusLight__Svg
                  color="success"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE geyPxt"
                    color="success"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  ON
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;

exports[`should render SWITCH_DISPLAY correctly with true value 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "SWITCH_DISPLAY",
      "values": Object {
        "value": 1,
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "OFF",
        "ON",
      ]
    }
    value={1}
  >
    <DisplayStatus__Container>
      <div
        className="DisplayStatus__Container-jrDlkR DzKAF"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  OFF
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  ON
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="success"
              >
                <StatusLight__Svg
                  color="success"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE geyPxt"
                    color="success"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;
